--- a/स्पेनस्य:_प्रकाश_स्तंभ.mw
+++ b/स्पेनस्य:_प्रकाश_स्तंभ.mw
@@ -1,5 +1,5 @@
 {{स्रोतहीन|date=अक्टूबर 2014}}
-स्पेनस्यः प्रकाशस्तंभ 
+स्पेनस्यः प्रकाशस्तंभ
 
 {| class="wikitable sortable"
 |-
@@ -13,7 +13,7 @@
 ! नोट
 |-
 | [[एल रोंपिदो दे कारताइआ प्रकाश स्तंभ]]
-| [[File:Faros_de_El_Rompido.JPG|120px]]
+| [[पटिमा:Faros_de_El_Rompido.JPG|120px]]
 | 
 | आन्दलूसिया
 | उएल्वा
@@ -22,7 +22,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[पुन्ता देल पिकाचो(मासागोन)]]
-| [[File:Mazagon_Lighthouse_03.jpg|120px]]
+| [[पटिमा:Mazagon_Lighthouse_03.jpg|120px]]
 | 
 | आन्दलूसिया
 | उएल्वा
@@ -112,7 +112,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[केप रोछे प्रकाश स्तंभ]]
-| [[File:Faro_de_Cabo_Roche_1294.jpg|120px]]
+| [[पटिमा:Faro_de_Cabo_Roche_1294.jpg|120px]]
 | 
 | आन्दलूसिया
 | कादिस खाड़ी
@@ -121,7 +121,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[केप तराफालगार प्रकाश स्तंभ]]
-| [[File:Faro_en_el_cabo_Trafalgar.jpg|120px]]
+| [[पटिमा:Faro_en_el_cabo_Trafalgar.jpg|120px]]
 | 
 | आन्दलूसिया
 | कादिस खाड़ी
@@ -139,7 +139,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[चिपिओना प्रकाश स्तंभ]]
-| [[File:Faro_de_Chipiona_1333.jpg|120px]]
+| [[पटिमा:Faro_de_Chipiona_1333.jpg|120px]]
 | 
 | आन्दलूसिया
 | कादिस खाड़ी
@@ -157,7 +157,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[पुन्ता कमारिनाल प्रकाश स्तंभ]]
-| [[File:Faro_Camarinal_1313.jpg|120px]]
+| [[पटिमा:Faro_Camarinal_1313.jpg|120px]]
 | 
 | आन्दलूसिया
 | आलगेकिरास खाड़ी
@@ -202,7 +202,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[पुन्ता दोंकिआ प्रकाश स्तंभ]]
-| [[File:Faro_estepona_-_lado_este.JPG|120px]]
+| [[पटिमा:Faro_estepona_-_lado_este.JPG|120px]]
 | 
 | आन्दलूसिया
 | मालागा
@@ -211,7 +211,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[मारबिआ प्रकाश स्तंभ]]
-| [[File:IPlaz_mam_Liechtuerm.JPG|120px]]
+| [[पटिमा:IPlaz_mam_Liechtuerm.JPG|120px]]
 | 
 | आन्दलूसिया
 | मालागा
@@ -229,7 +229,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[ला फ़ारोला दे मालागा]]
-| [[File:Farola_de_malaga.JPG|120px]]
+| [[पटिमा:Farola_de_malaga.JPG|120px]]
 | 
 | आन्दलूसिया
 | मालागा
@@ -256,7 +256,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[तोरोख़ प्रकाश स्तंभ]]
-| [[File:FaroTorrox.jpg|120px]]
+| [[पटिमा:FaroTorrox.jpg|120px]]
 | 
 | आन्दलूसिया
 | मालागा
@@ -391,7 +391,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[यानिस प्रकाश स्तंभ]]
-| [[File:Faro_de_LLanes.jpg|120px]]
+| [[पटिमा:Faro_de_LLanes.jpg|120px]]
 | 
 | आस्तूरियास
 | गीखोन
@@ -400,7 +400,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[रीबादेसिआ प्रकाश स्तंभ]]
-| [[File:Faro_de_Ribaदेsella.jpg|120px]]
+| [[पटिमा:Faro_de_Ribaदेsella.jpg|120px]]
 | 
 | आस्तूरियास
 | गीखोन
@@ -409,7 +409,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[यासरतरेस प्रकाश स्तंभ]]
-| [[File:Faro_de_Lastres_03.JPG|120px]]
+| [[पटिमा:Faro_de_Lastres_03.JPG|120px]]
 | 
 | आस्तूरियास
 | गीखोन
@@ -427,7 +427,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[तोरेस प्रकाश स्तंभ]]
-| [[File:Faro_de_Torres.jpg|120px]]
+| [[पटिमा:Faro_de_Torres.jpg|120px]]
 | 
 | आस्तूरियास
 | गीखोन
@@ -436,7 +436,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[कांकास प्रकाश स्तंभ]]
-| [[File:Candas4.jpg|120px]]
+| [[पटिमा:Candas4.jpg|120px]]
 | 
 | आस्तूरियास
 | गीखोन
@@ -445,7 +445,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[केप पेनिआस प्रकाश स्तंभ]]
-| [[File:Faro_de_Pe%C3%B1as.jpg|120px]]
+| [[पटिमा:Faro_de_Pe%C3%B1as.jpg|120px]]
 | 
 | आस्तूरियास
 | गीखोन
@@ -472,7 +472,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[कुदीएरो प्रकाश स्तंभ]]
-| [[File:Faro_de_Cudillero_001.jpg|120px]]
+| [[पटिमा:Faro_de_Cudillero_001.jpg|120px]]
 | 
 | आस्तूरियास
 | आविलेस
@@ -499,7 +499,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[लुआरका प्रकाश स्तंभ]]
-| [[File:Luarca02.jpg|120px]]
+| [[पटिमा:Luarca02.jpg|120px]]
 | 
 | आस्तूरियास
 | आविलेस
@@ -535,7 +535,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[पुन्ता मोसकारतेर प्रकाश स्तंभ]]
-| [[File:प्रकाश स्तंभ portinatx eivissa 2003 05.jpg|120px]]
+| [[पटिमा:प्रकाश स्तंभ portinatx eivissa 2003 05.jpg|120px]]
 | 
 | बालिआरिक टापू समूह
 | बालिआरिक टापू समूह
@@ -553,7 +553,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[बोताफ़ोक प्रकाश स्तंभ]]
-| [[File:Eivissa_-_Illa_Grossako_itsasargia.jpg|120px]]
+| [[पटिमा:Eivissa_-_Illa_Grossako_itsasargia.jpg|120px]]
 | 
 | बालिआरिक टापू समूह
 | बालिआरिक टापू समूह
@@ -561,7 +561,7 @@
 | 
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
-| [[एन पाओ प्रकाश स्तंभ ]]
+| [[एन पाओ प्रकाश स्तंभ]] 
 | <!--[[File:EXAMPLE|120px]] -->
 | 
 | बालिआरिक टापू समूह
@@ -634,7 +634,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[अलकानाका प्रकाश स्तंभ]]
-| [[File:Lighthouse_Alcanada2.jpg|120px]]
+| [[पटिमा:Lighthouse_Alcanada2.jpg|120px]]
 | 
 | बालिआरिक टापू समूह
 | बालिआरिक टापू समूह
@@ -643,7 +643,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[कापदेपेरा प्रकाश स्तंभ]]
-| [[File:Capदेpera_-_फ़ार_de_Capदेpera_01_ies.jpg|120px]]
+| [[पटिमा:Capदेpera_-_फ़ार_de_Capदेpera_01_ies.jpg|120px]]
 | 
 | बालिआरिक टापू समूह
 | बालिआरिक टापू समूह
@@ -679,7 +679,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[केप बलांक प्रकाश स्तंभ]]
-| [[File:Far_Cap_Blanc_3.jpg|120px]]
+| [[पटिमा:Far_Cap_Blanc_3.jpg|120px]]
 | 
 | बालिआरिक टापू समूह
 | बालिआरिक टापू समूह
@@ -688,7 +688,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[पोरतो पि प्रकाश स्तंभ]]
-| [[File:Torre दे Senyals दे Porto Pi.JPG|120px]]
+| [[पटिमा:Torre दे Senyals दे Porto Pi.JPG|120px]]
 | 
 | बालिआरिक टापू समूह
 | बालिआरिक टापू समूह
@@ -706,7 +706,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[ला मोला प्रकाश स्तंभ]]
-| [[File:Formentera_5_(2125831467).jpg|120px]]
+| [[पटिमा:Formentera_5_(2125831467).jpg|120px]]
 | 
 | बालिआरिक टापू समूह
 | बालिआरिक टापू समूह
@@ -742,7 +742,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[पुन्ता दे सा करू प्रकाश स्तंभ]]
-| [[File:Mallorca_2001-7.jpg|120px]]
+| [[पटिमा:Mallorca_2001-7.jpg|120px]]
 | 
 | बालिआरिक टापू समूह
 | बालिआरिक टापू समूह
@@ -751,7 +751,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[फ़ोरमेनतोर प्रकाश स्तंभ]]
-| [[File:Cap_Formentor_Lighthouse2.jpg|120px]]
+| [[पटिमा:Cap_Formentor_Lighthouse2.jpg|120px]]
 | 
 | बालिआरिक टापू समूह
 | बालिआरिक टापू समूह
@@ -760,7 +760,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[कावाएरीआ प्रकाश स्तंभ]]
-| [[File:Cavalleria_Lighthouse.jpg|120px]]
+| [[पटिमा:Cavalleria_Lighthouse.jpg|120px]]
 | 
 | बालिआरिक टापू समूह
 | बालिआरिक टापू समूह
@@ -769,7 +769,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[फ़ावारीतख़ प्रकाश स्तंभ]]
-| [[File:E09_फ़ार_de_Fav%C3%A0ritx.JPG|120px]]
+| [[पटिमा:E09_फ़ार_de_Fav%C3%A0ritx.JPG|120px]]
 | 
 | बालिआरिक टापू समूह
 | बालिआरिक टापू समूह
@@ -787,7 +787,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[इआ दे लौर प्रकाश स्तंभ]]
-| [[File:Faro दे la Isla देल Aire.jpg|120px]]
+| [[पटिमा:Faro दे la Isla देल Aire.jpg|120px]]
 | 
 | बालिआरिक टापू समूह
 | बालिआरिक टापू समूह
@@ -796,7 +796,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[आतरूतख़ प्रकाश स्तंभ]]
-| [[File:Cap_dArtrutx_(8948406425).jpg|120px]]
+| [[पटिमा:Cap_dArtrutx_(8948406425).jpg|120px]]
 | 
 | बालिआरिक टापू समूह
 | बालिआरिक टापू समूह
@@ -805,7 +805,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[सिउतादेया प्रकाश स्तंभ]]
-| [[File:Sa फ़ारोla.jpg|120px]]
+| [[पटिमा:Sa फ़ारोla.jpg|120px]]
 | 
 | बालिआरिक टापू समूह
 | बालिआरिक टापू समूह
@@ -814,7 +814,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[पुन्ता नाती प्रकाश स्तंभ]]
-| [[File:Faro दे पुन्ता Nati.jpg|120px]]
+| [[पटिमा:Faro दे पुन्ता Nati.jpg|120px]]
 | 
 | बालिआरिक टापू समूह
 | बालिआरिक टापू समूह
@@ -859,7 +859,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[पुन्ता दे आरीनागा प्रकाश स्तंभ]]
-| [[File:GC_Faro_de_Punta_de_Arinaga_R05.jpg|120px]]
+| [[पटिमा:GC_Faro_de_Punta_de_Arinaga_R05.jpg|120px]]
 | 
 | कानारी टापू समूह
 | लास पाल्मास
@@ -868,7 +868,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[मासपालोमास प्रकाश स्तंभ]]
-| [[File:Faro_Maspalomas_2008.jpg|120px]]
+| [[पटिमा:Faro_Maspalomas_2008.jpg|120px]]
 | 
 | कानारी टापू समूह
 | लास पाल्मास
@@ -895,7 +895,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[खांदीआ प्रकाश स्तंभ]]
-| [[File:P%C3%A1jara_-_Carretera_Punta_de_Jand%C3%ADa_-_Punta_de_Jand%C3%ADa_-_Faro_03_ies.jpg|120px]]
+| [[पटिमा:P%C3%A1jara_-_Carretera_Punta_de_Jand%C3%ADa_-_Punta_de_Jand%C3%ADa_-_Faro_03_ies.jpg|120px]]
 | 
 | कानारी टापू समूह
 | लास पाल्मास
@@ -904,7 +904,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[मोरो कहाबले प्रकाश स्तंभ]]
-| [[File:Faro_de_Jand%C3%ADa_-_01.JPG|120px]]
+| [[पटिमा:Faro_de_Jand%C3%ADa_-_01.JPG|120px]]
 | 
 | कानारी टापू समूह
 | लास पाल्मास
@@ -913,7 +913,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[ला एनतायाका प्रकाश स्तंभपुन्ता]]
-| [[File:Tuineje_-_Calle_Laurel_-_Faro_de_la_Entallada_02_ies.jpg|120px]]
+| [[पटिमा:Tuineje_-_Calle_Laurel_-_Faro_de_la_Entallada_02_ies.jpg|120px]]
 | 
 | कानारी टापू समूह
 | लास पाल्मास
@@ -940,7 +940,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[तोसतोन प्रकाश स्तंभ]]
-| [[File:La_Oliva_-_Faro_de_Tost%C3%B3n_01_ies.jpg|120px]]
+| [[पटिमा:La_Oliva_-_Faro_de_Tost%C3%B3n_01_ies.jpg|120px]]
 | 
 | कानारी टापू समूह
 | लास पाल्मास
@@ -949,7 +949,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[पेचिगुएरा प्रकाश स्तंभ]]
-| [[File:Lanzarote_Faro_de_Pechiguera_R02.jpg|120px]]
+| [[पटिमा:Lanzarote_Faro_de_Pechiguera_R02.jpg|120px]]
 | 
 | कानारी टापू समूह
 | लास पाल्मास
@@ -1029,7 +1029,7 @@
 | 
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
-| [[सान  क्रीसतोबाल प्रकाश स्तंभ]]
+| [[सान क्रीसतोबाल प्रकाश स्तंभ]]
 | <!--[[File:EXAMPLE|120px]] -->
 | 
 | कानारी टापू समूह
@@ -1093,7 +1093,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[सांता आना किले का प्रकाश स्तंभ]]
-| [[File:Castro_Urdiales_-_Castle_001.jpg|120px]]
+| [[पटिमा:Castro_Urdiales_-_Castle_001.jpg|120px]]
 | 
 | कांताबरिया
 | संतांदेर
@@ -1102,7 +1102,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[प्रकाश स्तंभ देल पेसकादोर]] 
-| [[File:Faro_del_Pescador.JPG|120px]]
+| [[पटिमा:Faro_del_Pescador.JPG|120px]]
 | 
 | कांताबरिया
 | संतांदेर
@@ -1129,7 +1129,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[ला पुन्ता दे ला सेरका प्रकाश स्तंभ]] 
-| [[File:Campeonato_Mundial_de_J80_en_Santander_2009_06.jpg|120px]]
+| [[पटिमा:Campeonato_Mundial_de_J80_en_Santander_2009_06.jpg|120px]]
 | 
 | कांताबरिया
 | संतांदेर
@@ -1138,7 +1138,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[मोऊरो प्रकाश स्तंभ]]
-| [[File:Campeonato_Mundial_de_J80_en_Santander_2009_11.jpg|120px]]
+| [[पटिमा:Campeonato_Mundial_de_J80_en_Santander_2009_11.jpg|120px]]
 | 
 | कांताबरिया
 | संतांदेर
@@ -1165,7 +1165,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[पुन्ता सीआ प्रकाश स्तंभ]]
-| [[File:Faro_de_Punta_Silla.jpg|120px]]
+| [[पटिमा:Faro_de_Punta_Silla.jpg|120px]]
 | 
 | कांताबरिया
 | संतांदेर
@@ -1174,7 +1174,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[प्रकाश स्तंभ देल काबाਯੋ]]
-| [[File:Faro_del_Caballo,_Santo%C3%B1a.JPG|120px]]
+| [[पटिमा:Faro_del_Caballo,_Santo%C3%B1a.JPG|120px]]
 | 
 | कांताबरिया
 | unused
@@ -1255,7 +1255,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[योबरेगात प्रकाश स्तंभ]]
-| [[File:Far_de_la_Torre_del_Riu_6.JPG|120px]]
+| [[पटिमा:Far_de_la_Torre_del_Riu_6.JPG|120px]]
 | 
 | कातालोनिया
 | बार्सिलोना
@@ -1273,7 +1273,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[कालेया प्रकाश स्तंभ]]
-| [[File:149_El_Far_des_del_cam%C3%AD_de_les_Torretes.jpg|120px]]
+| [[पटिमा:149_El_Far_des_del_cam%C3%AD_de_les_Torretes.jpg|120px]]
 | 
 | कातालोनिया
 | बार्सिलोना
@@ -1282,7 +1282,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[तोसा दे मार प्रकाश स्तंभ]]
-| [[File:Far_de_TOSSA_-_IB-133.JPG|120px]]
+| [[पटिमा:Far_de_TOSSA_-_IB-133.JPG|120px]]
 | 
 | कातालोनिया
 | बार्सिलोना
@@ -1300,7 +1300,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[केप संत सेबासतीआ प्रकाश स्तंभ]]
-| [[File:DSC_0064Far3.JPG|120px]]
+| [[पटिमा:DSC_0064Far3.JPG|120px]]
 | 
 | कातालोनिया
 | बार्सिलोना
@@ -1318,7 +1318,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[रोसेस प्रकाश स्तंभ]]
-| [[File:Far_de_Roses_5827.JPG|120px]]
+| [[पटिमा:Far_de_Roses_5827.JPG|120px]]
 | 
 | कातालोनिया
 | बार्सिलोना
@@ -1336,7 +1336,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[करिउस दी केप का प्रकाश स्तंभ]]
-| [[File:Cap_de_Creus_4.jpg|120px]]
+| [[पटिमा:Cap_de_Creus_4.jpg|120px]]
 | 
 | कातालोनिया
 | बार्सिलोना
@@ -1354,7 +1354,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[ताबारका प्रकाश स्तंभ]]
-| [[File:Tabarca_Lighthouse.JPG|120px]]
+| [[पटिमा:Tabarca_Lighthouse.JPG|120px]]
 | 
 | वालेंसियाई समुदाय
 | आलीकांते
@@ -1399,7 +1399,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[कापेला नाउ प्रकाश स्तंभ]]
-| [[File:X%C3%A0bia_-_फ़ार_del_cap_de_la_Nau.JPG|120px]]
+| [[पटिमा:X%C3%A0bia_-_फ़ार_del_cap_de_la_Nau.JPG|120px]]
 | 
 | वालेंसियाई समुदाय
 | आलीकांते
@@ -1408,7 +1408,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[काबो दे संत आंतोनि प्रकाश स्तंभ]]
-| [[File:Faro_del_Cabo_de_San_Antonio.jpg|120px]]
+| [[पटिमा:Faro_del_Cabo_de_San_Antonio.jpg|120px]]
 | 
 | वालेंसियाई समुदाय
 | आलीकांते
@@ -1516,7 +1516,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[हर्कूलीज़ मीनार]]
-| [[File:A_coruna_torre_de_hercules_sunset.jpg|120px]]
+| [[पटिमा:A_coruna_torre_de_hercules_sunset.jpg|120px]]
 | 
 | गालिसिया
 | 
@@ -1570,7 +1570,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[केप ओरतेगाल प्रकाश स्तंभ]]
-| [[File:Faro_cabo_ortegal.jpg|120px]]
+| [[पटिमा:Faro_cabo_ortegal.jpg|120px]]
 | 
 | गालिसिया
 | 
@@ -1696,7 +1696,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[केप फिसतेरा प्रकाश स्तंभ]]
-| [[File:Cape_Finisterre_-_Lighthouse.jpg|120px]]
+| [[पटिमा:Cape_Finisterre_-_Lighthouse.jpg|120px]]
 | 
 | गालिसिया
 | 
@@ -1705,7 +1705,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[पुन्ता इंसुआ प्रकाश स्तंभ]]
-| [[File:Faro_de_Lari%C3%B1o.jpg|120px]]
+| [[पटिमा:Faro_de_Lari%C3%B1o.jpg|120px]]
 | 
 | गालिसिया
 | 
@@ -1732,7 +1732,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[केप कोरूबेदो प्रकाश स्तंभ]]
-| [[File:Faro_Corrubedo_(4063782760).jpg|120px]]
+| [[पटिमा:Faro_Corrubedo_(4063782760).jpg|120px]]
 | 
 | गालिसिया
 | 
@@ -1804,7 +1804,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[केप ओमे प्रकाश स्तंभ]]
-| [[File:Candas_del_Morrazo_Faro_de_cabo_Home.JPG|120px]]
+| [[पटिमा:Candas_del_Morrazo_Faro_de_cabo_Home.JPG|120px]]
 | 
 | गालिसिया
 | 
@@ -1966,7 +1966,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[केप ला पलाता प्रकाश स्तंभ]]
-| [[File:Faro_de_la_Plata-1.jpg|120px]]
+| [[पटिमा:Faro_de_la_Plata-1.jpg|120px]]
 | 
 | बास्क कंट्री
 | पासाया
@@ -2056,7 +2056,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[पुन्ता अलमीना प्रकाश स्तंभ]]
-| [[File:Faro_de_Ceuta.jpg|120px]]
+| [[पटिमा:Faro_de_Ceuta.jpg|120px]]
 | 
 | कुएता और मेलिया
 | सेउता
@@ -2083,7 +2083,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[मेलिया प्रकाश स्तंभ]]
-| [[File:Melilla_Faro.jpg|120px]]
+| [[पटिमा:Melilla_Faro.jpg|120px]]
 | 
 | कुएता और मेलिया
 | मेलिया
@@ -2101,7 +2101,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[फ़ारो काबो दे पालोस]]
-| [[File:Faro_de_Cabo_de_Palos,_Cartagena,_Murcia.JPG|120px]]
+| [[पटिमा:Faro_de_Cabo_de_Palos,_Cartagena,_Murcia.JPG|120px]]
 | 
 | 
 | 
@@ -2110,7 +2110,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[पोरतो कोलोम प्रकाश स्तंभ]]
-| [[File:Punta_de_ses_Crestes.JPG|120px]]
+| [[पटिमा:Punta_de_ses_Crestes.JPG|120px]]
 | 
 | 
 | 
@@ -2119,7 +2119,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[फ़ार देस काप दे सेस सालीनिस]]
-| [[File:Far_des_Cap_Salines_02.jpg|120px]]
+| [[पटिमा:Far_des_Cap_Salines_02.jpg|120px]]
 | 
 | 
 | 
@@ -2128,7 +2128,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[तोरे देल रेलोतग]]
-| [[File:079_Torre_de_Jaume_I_(telef%C3%A8ric)_i_torre_del_Rellotge.jpg|120px]]
+| [[पटिमा:079_Torre_de_Jaume_I_(telef%C3%A8ric)_i_torre_del_Rellotge.jpg|120px]]
 | 
 | 
 | 
@@ -2137,7 +2137,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[फ़ार दे ला सावीना]]
-| [[File:FarSavina.jpg|120px]]
+| [[पटिमा:FarSavina.jpg|120px]]
 | 
 | 
 | 
@@ -2146,7 +2146,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[फ़ारो दे सुआंसेस]]
-| [[File:Isladelosconejos.jpg|120px]]
+| [[पटिमा:Isladelosconejos.jpg|120px]]
 | 
 | 
 | 
@@ -2155,7 +2155,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[फ़ारो दे काबो वीदीओ]]
-| [[File:Vidiu_Lighthouse.jpg|120px]]
+| [[पटिमा:Vidiu_Lighthouse.jpg|120px]]
 | 
 | 
 | 
@@ -2164,7 +2164,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[फ़ारो दे मातालासकानिआस]]
-| [[File:Faro_de_Matalasca%C3%B1as.jpg|120px]]
+| [[पटिमा:Faro_de_Matalasca%C3%B1as.jpg|120px]]
 | 
 | 
 | 
@@ -2173,7 +2173,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[फ़ारो दे काबो मेयोर]]
-| [[File:Faro_de_Cabo_Mayor.JPG|120px]]
+| [[पटिमा:Faro_de_Cabo_Mayor.JPG|120px]]
 | 
 | 
 | 
@@ -2182,7 +2182,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[फ़ारो मोनते इगुएलदो]]
-| [[File:Lighthouse_in_San_Sebastian%27s_Igueldo_mountain_(Donostia,_Spain)..jpg|120px]]
+| [[पटिमा:Lighthouse_in_San_Sebastian%27s_Igueldo_mountain_(Donostia,_Spain)..jpg|120px]]
 | 
 | 
 | 
@@ -2191,7 +2191,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[फ़ारो दा इया दे ओनस]]
-| [[File:Faro_da_Illa_de_Ons.jpg|120px]]
+| [[पटिमा:Faro_da_Illa_de_Ons.jpg|120px]]
 | 
 | 
 | 
@@ -2200,7 +2200,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[काबो दे आखो प्रकाश स्तंभ]]
-| [[File:Cabo_de_Ajo.jpg|120px]]
+| [[पटिमा:Cabo_de_Ajo.jpg|120px]]
 | 
 | 
 | 
@@ -2209,7 +2209,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[फ़ार दे बारबारिया]]
-| [[File:Far_d%27es_cap_de_Barbaria_02.JPG|120px]]
+| [[पटिमा:Far_d%27es_cap_de_Barbaria_02.JPG|120px]]
 | 
 | 
 | 
@@ -2218,7 +2218,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[फ़ारो दे काबो बूसतो]]
-| [[File:Faro_de_Cabo_Busto.jpg|120px]]
+| [[पटिमा:Faro_de_Cabo_Busto.jpg|120px]]
 | 
 | 
 | 
@@ -2227,7 +2227,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[फ़ारो दे काबो विआनो]]
-| [[File:Cabo_Vilan_(4043908368).jpg|120px]]
+| [[पटिमा:Cabo_Vilan_(4043908368).jpg|120px]]
 | 
 | 
 | 
@@ -2236,7 +2236,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[फ़ार देल काप गरोस]]
-| [[File:Far_Cap_Gros.JPG|120px]]
+| [[पटिमा:Far_Cap_Gros.JPG|120px]]
 | 
 | 
 | 
@@ -2245,7 +2245,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[पुन्ता ਕੁੰपलीका प्रकाश स्तंभ]]
-| [[File:Faro_de_Punta_Cumplida.jpg|120px]]
+| [[पटिमा:Faro_de_Punta_Cumplida.jpg|120px]]
 | 
 | 
 | 
@@ -2254,7 +2254,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[पेनिसकोला प्रकाश स्तंभ]]
-| [[File:Peniscola_Lighthouse_03.JPG|120px]]
+| [[पटिमा:Peniscola_Lighthouse_03.JPG|120px]]
 | 
 | 
 | 
@@ -2263,7 +2263,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[फ़ार दे कालानानस]]
-| [[File:Far_de_Cala_Nans_(Cadaqu%C3%A9s)_Sep._2007.JPG|120px]]
+| [[पटिमा:Far_de_Cala_Nans_(Cadaqu%C3%A9s)_Sep._2007.JPG|120px]]
 | 
 | 
 | 
@@ -2272,7 +2272,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[फ़ार दे ला गालेरिआ]]
-| [[File:Far_de_Torredembarra_2012.JPG|120px]]
+| [[पटिमा:Far_de_Torredembarra_2012.JPG|120px]]
 | 
 | 
 | 
@@ -2281,7 +2281,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[फ़ार दे सारनिया]]
-| [[File:Far_de_Punta_s%27Arnella_5730.JPG|120px]]
+| [[पटिमा:Far_de_Punta_s%27Arnella_5730.JPG|120px]]
 | 
 | 
 | 
@@ -2290,7 +2290,7 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |-
 | [[फ़ार देल फांगार]]
-| [[File:Delta_del_ebro_Faro_27.JPG|120px]]
+| [[पटिमा:Delta_del_ebro_Faro_27.JPG|120px]]
 | 
 | 
 | 
@@ -2299,5 +2299,5 @@
 | <!--<br /><br />{{coord|00.0000|N|00.0000|W|type:country_region:XX|}}-->
 |}
 
-==स्रोत==
+== स्रोत ==
 * https://en.wikipedia.org/wiki/List_of_lighthouses_in_Spain
